changes in resources and project rename

--- a/static-code-analysis/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE4.html
+++ b/static-code-analysis/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE4.html
@@ -5,11 +5,12 @@
     
     public void test() {
         for(int i = 0; i < 5; i++) {
-            System.out.println("The number is " + a);
+            System.out.println("The number is " + ClassName.a);
         }
         int i = 0;
         while(i < 5){
-            System.out.println("The number is " + a);
+            System.out.println("The number is " + ClassName.a);
+            i++;
         }
     }
 </pre>
@@ -25,6 +26,7 @@
         int i = 0;
         while(i < 5){
             System.out.println("The number is " + b);
+            i++;
         }
     }
 </pre>
