adding description of each rule

--- a/greenForLoops/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE1.html
+++ b/greenForLoops/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE1.html
@@ -1,4 +1,4 @@
-<p>Do not concatenate string inside loops. If you have to, use StringBuilder instead.</p>
+<p>String in Java is immutable; concatenation of string creates new string, whereas StringBuilder is mutable and provides a method to modify a string without creating a new string, thereby consuming less energy</p>
 <h2>Noncompliant Code Example</h2>
 <pre>
 public String concatenateString(String[] sampleStrings){
