--- a/greenForLoops/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE2.html
+++ b/greenForLoops/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE2.html
@@ -1,4 +1,4 @@
-<p>If you are iterating as per the number of item in any collection types and array, calculate the size or length of collection object before hand to avoid calculating the length on every iteration to avoid high energy consumption.</p>
+<p>Initializing a loop without referring array length consumes 10% less energy than a loop initialized by mentioning array length</p>
 <h2>Non-compliant Code Examples</h2>
 <pre>
 
