--- a/greenForLoops/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE3.html
+++ b/greenForLoops/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE3.html
@@ -1,4 +1,4 @@
-<p>Do not initiate array inside a loop.</p>
+<p>The process of initializing an array using a loop statement results in high energy consumption, mainly due to the repetitive execution of comparison operations and index modifications</p>
 <h2>Non-compliant Code Examples</h2>
 <pre>
 
