--- a/greenForLoops/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE5.html
+++ b/greenForLoops/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE5.html
@@ -1,4 +1,4 @@
-<p>Avoid using nested loop; instead try to convert nested loop to single loop.</p>
+<p>In the nested loop, even though a simple operation is running, the number of executions of the operation multiplies thereby affecting in energy saving as well as runtime performance. Therefore, refactoring of nested loops into a single loop is suggested</p>
 <h2>Non-compliant Code Examples</h2>
 <pre>
    
